syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.g5.grpc";
option objc_class_prefix = "EX";

package account;

message AccountRequest {
    string account = 1;
    string userId = 2;
    string amount = 3;
    string createdAt = 4;
}

message AccountNumRequest {
    string account = 1;
}

message AccountUpdateRequest{
    string account = 1;
    string amount = 2;
}

message AccountResponse {
    string id = 1;
    string account = 2;
    string userId = 3;
    string amount = 4;
    string createdAt = 5;
}

service AccountService {
    rpc CreateAccount(AccountRequest) returns (AccountResponse);
    rpc FindAccountByAccountNum (AccountNumRequest) returns (AccountResponse);
    rpc UpdateAccount(AccountUpdateRequest) returns (AccountResponse);
}